Fixed .gadget vertical centering and arrows. Aligned right header bar and RES support.

--- a/scss/_res.scss
+++ b/scss/_res.scss
@@ -1,4 +1,12 @@
 #header {
+
+	#userbarToggle {
+		background-color: transparent !important;
+		color: $blue_dark;
+		border: none;
+		@extend #mail;
+	}
+
 	#RESShortcutsEditContainer {
 		background: transparent !important;
 
